@@ -42,6 +42,9 @@ Must-Have
 Nice-to-Have
 ------------
 
+- Add a default-view-config-params decorator that can be applied to a class
+  which names defaults for method-based view_config decorator options.
+
 - Add narrative docs for wsgiapp and wsgiapp2.
 
 - Flesh out "Paste" narrative docs chapter.
@@ -98,14 +101,7 @@ Nice-to-Have
 Future
 ------
 
-- 1.3: Remove ``pyramid.renderers.renderer_from_name`` (deprecated).
-
 - 1.3: Kill off ``bfg.routes`` envvars in router.
-
-- 1.3: Michael's route group work
-
-- 1.3: Add a default-view-config-params decorator that can be applied to a
-  class which names defaults for method-based view_config decorator options.
 
 - 1.4: Remove ``chameleon_text`` / ``chameleon_zpt`` deprecated functions
   (render_*)
